[package]
name = "green"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "package"
path = "src/package.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.4.5", default-features = false }
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
strum = "0.24"
strum_macros = "0.24"
base64 = "0.21.2"
#rodio = { version = "0.17.3", default-features = false, features = [
#    "wasm-bindgen",
#] }
rodio = { version = "0.17.3", default-features = false, features = [
    "flac",
    "vorbis",
    "wav",
    "mp3",
    "wasm-bindgen",
] }
regex = "*"
#zip-extensions = "*"
sapp-jsutils = "*"
image = { version = "0.24", default-features = false, features = [
    "png",
    "tga",
] }
#rustysynth = "*"
#rustysynth = { git = "https://github.com/yeahross0/rustysynth", rev = "60ab772" }
rustysynth = { path = "../rustysynth/rustysynth" }
tinyaudio = "*"
itertools = "*"
midly = { version = "0.5.3", default-features = false, features = [
    "alloc",
    "std",
] }
futures = "0.3.30"

[profile.release]
opt-level = 's'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
strip = true      # Strip symbols from binary*
